@@ -2399,16 +2399,6 @@ relevant in the context of some unexpected behavior has to be judged
 on a case by case basis.
 @end table
 
-@defvar magit-process-extreme-logging
-This option controls whether @code{magit-process-file} logs to the
-@code{*Messages*} buffer.
-
-Only intended for temporary use when you try to figure out how
-Magit uses Git behind the scene.  Output that normally goes to
-the magit-process buffer continues to go there.  Not all output
-goes to either of these two buffers.
-@end defvar
-
 @node Git Process Status
 @subsection Git Process Status
 
@@ -11433,6 +11423,18 @@ on a case by case basis.
 This command toggles whether Magit refreshes buffers verbosely.
 Enabling this helps figuring out which sections are bottlenecks.
 The additional output can be found in the @code{*Messages*} buffer.
+
+@item @kbd{M-x magit-toggle-subprocess-record}
+@findex magit-toggle-subprocess-record
+This command toggles whether subprocess invocations are recorded.
+
+When enabled, all subprocesses started by @code{magit-process-file} are
+logged into the buffer specified by @code{magit-process-record-buffer-name}
+using the format @code{magit-process-record-entry-format}.  This is for
+debugging purposes.
+
+This is in addition to and distinct from the default logging done by
+default, and additional logging enabled with @code{magit-toggle-git-debug}.
 
 @item @kbd{M-x magit-debug-git-executable}
 @findex magit-debug-git-executable
